syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message RefreshRequest {
  string token = 1;
}

message RefreshResponse{
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
}
